# rust-calculator

./: .gitignore  Cargo.toml  README.md
calculator-engine/: Cargo.toml
calculator-engine/src/: calculation_trace.rs  calculator.rs  lib.rs  token.rs
calculator-service/: Cargo.toml
calculator-service/src/: app_config.rs  lib.rs  main.rs
calculator-service/src/config/: mod.rs
calculator-service/src/router/: calculation.rs  mod.rs
calculator-service/tests/: calculation_tests.rs
calculator-ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
calculator-ui/public/locales/en/: translation.json
calculator-ui/public/locales/ko/: translation.json
calculator-ui/src/: App.tsx  main.tsx
calculator-ui/src/components/: CalculationView.tsx  LangSelector.tsx  TitleBar.tsx
calculator-ui/src/i18n/: i18n.ts
calculator-ui/src/i18n/locales/en/: translation.json
calculator-ui/src/i18n/locales/ko/: translation.json
http/: request.http
src/: main.rs
