[package]
name = "calculator-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"

[dev-dependencies]
assert-json-diff = "^2"
