[package]
name = "calculator-service"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "calculator-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
calculator-engine = { path = "../calculator-engine" }

axum = "0.7"
tokio = { version = "1.37", features = ["full"]}
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1"
