[package]
name = "calculator-service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "calculator-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
calculator-engine = { path = "../calculator-engine" }

axum = "0.7"
tokio = { version = "1.37", features = ["full"]}
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1"
config = "0.14"
dotenv = "0.15"
eyre = "0.6"
color-eyre = "0.6"
env_logger = "0.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.9"

[dev-dependencies]
reqwest = { version = "^0.12", features = ["json"] }
assert-json-diff = "^2"
